welcome.lessons.welcome.array.has271.Has271.scala.error
has271:11: error: not found: value num
      if (num(k)==nums(k+1)-5 && nums(k)==nums(k+2)+1){
          ^has271:10: error: type mismatch;
 found   : Unit
 required: Boolean
    for (k<-0 to nums.length-2){
          ^